<resources>
    <string name="app_name">ZH_DEMO</string>
    <string name="gr_gather_function">Function Set</string>
    <string name="ch_bind_unbind">Bind and Unbind</string>
    <string name="ch_bind_unbind_berry">Bind and Unbind(Berry)</string>
    <string name="ch_data">Data</string>
    <string name="ch_file">File Transfer</string>
    <string name="ch_file_berry">File Transfer(Berry)</string>
    <string name="ch_dial">Dial</string>
    <string name="ch_dial_berry">Dial(berry)</string>
    <string name="ch_weather">Weather</string>
    <string name="ch_weather_berry">Weather(berry)</string>
    <string name="ch_weather_id_test_berry">Weather id test(berry)</string>
    <string name="ch_sport_auxiliary">Assistive Movement</string>
    <string name="ch_sport_screen">Sub-screen Movement</string>
    <string name="ch_measure">Measurement</string>
    <string name="ch_ev">EV Electric Motorcycle</string>
    <string name="ch_emoji">Emoji</string>
    <string name="ch_esim">eSim</string>
    <string name="ch_breathing_light">Breathing light</string>
    <string name="ch_ai_voice_berry">Voice Function(berry)</string>
    <string name="ch_offline_map_berry">Offline Map(berry)</string>
    <string name="ch_socket_berry">Alipay Bus Code(Berry)</string>
    <string name="ch_micro_function">Small Feature</string>
    <string name="data_get_simple_set_summary">Get Summary of Simple Settings</string>
    <string name="data_get_device">Get device information</string>
    <string name="data_get_battery">Get power information</string>
    <string name="data_get_battery_use_list">Get the list of power consumption</string>
    <string name="data_real_switch">Real-time data switch </string>
    <string name="data_get_fitness">Get daily data </string>
    <string name="data_get_fitness_mode1">Get daily data (transmission today)</string>
    <string name="data_get_fitness_mode2">Get daily data (transmission history)</string>
    <string name="data_get_fitness_mode3">Get daily data (transmission all)</string>
    <string name="data_executes_delete_daily_data">APP confirm received data (ring/bracelet)</string>
    <string name="data_get_sport">Get motion data</string>
    <string name="data_get_device_history_log">Retrieve device historical log files</string>
    <string name="data_get_device_history_log_berry">Retrieve device historical log files(Berry)</string>
    <string name="file_ota">OTA</string>
    <string name="file_agps">AGPS</string>
    <string name="file_ota_berry">Ota(Berry)</string>
    <string name="file_agps_berry">AGPS(Berry)</string>
    <string name="file_loda_agps_berry">Loda AGPS(Berry)</string>
    <string name="clock_dial_manage">Dial Management </string>
    <string name="clock_dial_ordinary">Ordinary Dial</string>
    <string name="clock_dial_photo">Album Watch Face</string>
    <string name="clock_dial_diy_v1_demo">Diy Watch Face V1</string>
    <string name="clock_dial_diy_v2_demo_number">Diy Watch Face v2-Number</string>
    <string name="clock_dial_diy_v2_demo_pointer">Diy Watch Face v2-Pointer</string>
    <string name="clock_dial_diy_v2">Diy Watch Face V2 Simple</string>
    <string name="clock_dial_manage_berry">Dial Management(Berry)</string>
    <string name="clock_dial_ordinary_berry">Ordinary Dial(Berry)</string>
    <string name="clock_dial_photo_berry">Album Watch Face(Berry)</string>
    <string name="micro_restart">Restart</string>
    <string name="micro_shutdown">Shutdown</string>
    <string name="micro_find_wear">Find Bracelet</string>
    <string name="micro_take_photo">Shake to take a photo </string>
    <string name="micro_widget_list">Direct Card List</string>
    <string name="micro_application_list">App List</string>
    <string name="micro_sports_icon_list">Function list of sports belt icon</string>
    <string name="gr_set_menu">Settings Collection</string>
    <string name="ch_set_user">User Settings</string>
    <string name="ch_set_reminder">Reminder Settings</string>
    <string name="ch_set_reminder_berry">Reminder Settings(Berry)</string>
    <string name="ch_set_fun">Function Settings</string>
    <string name="ch_set_child">Children\'s Settings</string>
    <string name="ch_set_child_berry">Children\'s Settings(Berry)</string>
    <string name="ch_set_other">Other Settings</string>
    <string name="ch_set_other_berry">Other Settings(Berry)</string>
    <string name="user_set_sync_time">Synchronization Time </string>
    <string name="user_set_language">Device Language</string>
    <string name="user_set_user_config">User Configuration</string>
    <string name="reminder_notice_system">System Notification</string>
    <string name="reminder_notice_other">Third Party Notification</string>
    <string name="reminder_notice_set">Notification Settings</string>
    <string name="reminder_bt_call_switch">Call Bluetooth Switch Settings</string>
    <string name="reminder_call_reminder_set">Call Reminder Mode Settings</string>
    <string name="reminder_quick_reply">Quick Reply</string>
    <string name="reminder_contacts_list">Contact List</string>
    <string name="reminder_large_contacts_list">Large Contact List(CY Customized)</string>
    <string name="reminder_sos_contacts">Emergency Contact</string>
    <string name="reminder_favorite_contacts">Favorite Contacts </string>
    <string name="reminder_event">Event Reminder</string>
    <string name="reminder_clock">Alarm reminder</string>
    <string name="reminder_sedentary">Sedentary reminder </string>
    <string name="reminder_medication">Medication Reminder </string>
    <string name="reminder_drink_water">Drinking Water Reminder</string>
    <string name="reminder_meals">Meal reminder</string>
    <string name="reminder_wash_hand">Handwashing Reminder</string>
    <string name="reminder_physiological_cycle">Menstrual Cycle</string>
    <string name="reminder_sleep_reminder">Sleep Reminder </string>
    <string name="reminder_set_call_notice_switch_berry">Set the incoming call notification switch(Berry)</string>
    <string name="reminder_whats_app_quick_reply_berry">WhatsApp Quick Reply(Berry)</string>
    <string name="reminder_super_notice_berry">Super Notification(Berry)</string>
    <string name="reminder_favorite_contacts_head_berry">Collect Contacts (including avatars)(Berry)</string>
    <string name="reminder_quick_reply_voice_berry">Quick Reply Voice(Berry)</string>
    <string name="fun_world_clock">World Clock</string>
    <string name="fun_music">Music Control</string>
    <string name="fun_stock">Stock</string>
    <string name="fun_continuous_heart">Continuous Heart Rate Monitoring</string>
    <string name="fun_hear_real_time">Real-time Heart Rate Detection(Customized by ZYB)</string>
    <string name="fun_continuous_spo2">Continuous Blood Oxygen Monitoring</string>
    <string name="fun_continuous_body_temperature">7 Continuous body temperature monitoring</string>
    <string name="fun_pressure_mode">Continuous pressure detection</string>
    <string name="fun_rem">REM Switch </string>
    <string name="fun_sleep_mode">Sleep Mode</string>
    <string name="fun_sw_spo2_monitor">Screenless wristband blood oxygen warning settings</string>
    <string name="fun_sw_hr_monitor">Screenless wristband heart rate warning settings</string>
    <string name="fun_sw_sport_hr_monitor">Screenless wristband sport heart rate warning settings</string>
    <string name="fun_sw_hrv_monitor">Screenless wristband Stress warning settings</string>
    <string name="fun_sw_br_monitor">Screenless wristband breathing relaxation warning settings</string>
    <string name="fun_sw_lp_reminder">Screenless wristband low power reminder settings</string>
    <string name="fun_sw_measure_frequency">Screenless wristband measurement frequency settings</string>
    <string name="fun_sw_device_temperature">Screenless wristband confirm device temperature event</string>
    <string name="fun_sw_dev_reboot_req">Screenless wristband reboot request</string>
    <string name="fun_sw_sleep">Screenless wristband sleep settings</string>
    <string name="child_schedule">scheduler</string>
    <string name="child_school_mode">School Model</string>
    <string name="child_exam_mode">Exam Mode</string>
    <string name="child_child_info_berry">Children\'s Information(Berry)</string>
    <string name="child_parent_info_berry">Parent Information(Berry)</string>
    <string name="child_fc_berry">Flash Card(Berry)</string>
    <string name="child_challenge_berry">Challenge(Berry)</string>
    <string name="child_revenue_berry">Revenue(Berry)</string>
    <string name="child_medal_berry">Medal(Berry)</string>
    <string name="other_wrist_screen">Raise your wrist to light up the screen </string>
    <string name="other_screen_set">Screen Settings </string>
    <string name="other_overlay_screen">Overlay Screen Off </string>
    <string name="other_information_screen_display">Screen Off Settings</string>
    <string name="other_vibration_intensity">Vibration Intensity </string>
    <string name="btn_get">Get</string>
    <string name="btn_set">set up</string>
    <string name="btn_switch">Switch</string>
    <string name="start_time">Average speed that day:</string>
    <string name="end_time">Total driving time that day:</string>
    <string name="input_clock_name">Alarm Name:</string>
    <string name="input_contacts_name">Contact Name:</string>
    <string name="input_msg_context">SMS Content:</string>
    <string name="input_id">ID:</string>
    <string name="input_content">Content:</string>
    <string name="input_phone">Phone number:</string>
    <string name="input_name">Name:</string>
    <string name="input_heart_warning_value">Heart rate warning value:</string>
    <string name="input_heart_sport_warning_value">Exercise heart rate warning value:</string>
    <string name="input_low_warning_value">Low heart rate warning value:</string>
    <string name="unit_type_imperial">English</string>
    <string name="Temperature_type_fahrenheit">Fahrenheit</string>
    <string name="set_unit_type">Set unit format</string>
    <string name="set_temperature_type">Set temperature unit</string>
    <string name="set_user_info">Set user information</string>
    <string name="set_user_info_or_unit">Set user information and units</string>
    <string name="get_user_profile">Get user configuration</string>
    <string name="call_reminder">Incoming call notification</string>
    <string name="missed_call">Missed call</string>
    <string name="sms_reminder">SMS notification</string>
    <string name="hang_up_phone">Hang up</string>
    <string name="answer_the_phone">Answer a call</string>
    <string name="clock_week1">Monday</string>
    <string name="clock_week2">Tuesday</string>
    <string name="clock_week3">Wednesday</string>
    <string name="clock_week4">Thursday</string>
    <string name="clock_week5">Friday</string>
    <string name="clock_week6">Saturday</string>
    <string name="clock_week7">Sunday</string>
    <string name="heart_warning_switch">Heart rate warning on/off</string>
    <string name="heart_smart_switch">Smart heart rate on/off</string>
    <string name="heart_sport_switch">Exercise heart rate warning on/off</string>
    <string name="do_not_disturb_smart_mode">Smart Do Not Disturb mode on/off</string>
    <string name="rem_switch">Rapid eye movement on/off</string>
    <string name="auto_dark_screen_switch">Auto-dim screen</string>
    <string name="product_test_restart">Restart production test</string>
    <string name="product_test_reset">Reset production test</string>
    <string name="product_test_soft_reset">Soft reset production test</string>
    <string name="product_test_hard_reset">Hard reset production test</string>
    <string name="heart_light_leak_test">Heart rate light leakage test</string>
    <string name="verify_philips_key">Verify key</string>
    <string name="get_device_uuid">Get device UUID</string>
    <string name="write_philips_key">Write key to device</string>
</resources>