<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout style="@style/help_ll">

        <CheckBox
            android:id="@+id/cbTop"
            style="@style/help_cx"
            android:text="@string/fun_sleep_mode" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivHelp"
            style="@style/help_iv" />

    </LinearLayout>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/llBottom"
        style="@style/public_lin01"
        tools:visibility="gone">

        <CheckBox
            android:id="@+id/cbSwitch"
            style="@style/public_checkbox"
            android:text="@string/btn_switch" />

        <CheckBox
            android:id="@+id/cbRemSwitch"
            style="@style/public_checkbox"
            android:text="@string/rem_switch" />

        <CheckBox
            android:id="@+id/cbSmartDoNotDisturbSwitch"
            style="@style/public_checkbox"
            android:text="@string/do_not_disturb_smart_mode" />

        <CheckBox
            android:id="@+id/cbAutoDarkScreenSwitch"
            style="@style/public_checkbox"
            android:text="@string/auto_dark_screen_switch" />

        <androidx.appcompat.widget.LinearLayoutCompat style="@style/public_input_lin">

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/public_textview01"
                android:text="@string/start_time" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvStartTime"
                style="@style/public_textview03" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat style="@style/public_input_lin">

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/public_textview01"
                android:text="@string/end_time" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvEndTime"
                style="@style/public_textview03" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnGet"
            style="@style/public_button"
            android:text="@string/btn_get" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnSet"
            style="@style/public_button"
            android:text="@string/btn_set" />

    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.appcompat.widget.LinearLayoutCompat>