<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout style="@style/help_ll">

        <CheckBox
            android:id="@+id/cbTop"
            style="@style/help_cx"
            android:text="@string/fun_continuous_heart" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivHelp"
            style="@style/help_iv" />

    </LinearLayout>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/llBottom"
        style="@style/public_lin01"
        tools:visibility="gone">

        <CheckBox
            android:id="@+id/cbSwitch"
            style="@style/public_checkbox"
            android:text="@string/btn_switch" />

        <CheckBox
            android:id="@+id/cbHeartWarningSwitch"
            style="@style/public_checkbox"
            android:text="@string/heart_warning_switch" />

        <CheckBox
            android:id="@+id/cbSmartHeartSwitch"
            style="@style/public_checkbox"
            android:text="@string/heart_smart_switch" />

        <CheckBox
            android:id="@+id/cbSportHeartWarningSwitch"
            style="@style/public_checkbox"
            android:text="@string/heart_sport_switch" />

        <androidx.appcompat.widget.LinearLayoutCompat style="@style/public_input_lin">

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/public_textview01"
                android:text="@string/input_heart_warning_value" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/etHeartWarningValue"
                style="@style/public_edit_number" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat style="@style/public_input_lin">

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/public_textview01"
                android:text="@string/input_heart_sport_warning_value" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/etSportHeartWarningValue"
                style="@style/public_edit_number" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat style="@style/public_input_lin">

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/public_textview01"
                android:text="@string/input_low_warning_value" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/etHeartLow"
                style="@style/public_edit_number" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnGet"
            style="@style/public_button"
            android:text="@string/btn_get" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnSet"
            style="@style/public_button"
            android:text="@string/btn_set" />

    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.appcompat.widget.LinearLayoutCompat>