<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include
        android:id="@+id/layoutLog"
        layout="@layout/public_item_log" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnRestart"
                style="@style/public_button"
                android:text="@string/product_test_restart" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btReset"
                style="@style/public_button"
                android:text="@string/product_test_reset" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btSoftReset"
                style="@style/public_button"
                android:text="@string/product_test_soft_reset" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btHardReset"
                style="@style/public_button"
                android:text="@string/product_test_hard_reset" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btHeartLightLeakTest"
                style="@style/public_button"
                android:text="@string/heart_light_leak_test" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btVerifyPhilipsKey"
                style="@style/public_button"
                android:text="@string/verify_philips_key" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btGetDeviceUUID"
                style="@style/public_button"
                android:text="@string/get_device_uuid" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/etKey"
                style="@style/public_edit_str"
                />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btWritePhilipsKey"
                style="@style/public_button"
                android:text="@string/write_philips_key" />


        </androidx.appcompat.widget.LinearLayoutCompat>

    </ScrollView>

</androidx.appcompat.widget.LinearLayoutCompat>