<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout style="@style/help_ll">

        <CheckBox
            android:id="@+id/cbTop"
            style="@style/help_cx"
            android:text="@string/reminder_notice_system" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivHelp"
            style="@style/help_iv" />

    </LinearLayout>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/llBottom"
        style="@style/public_lin01"
        tools:visibility="gone">

        <androidx.appcompat.widget.LinearLayoutCompat style="@style/public_input_lin">

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/public_textview01"
                android:text="@string/input_phone" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/etPhone"
                style="@style/public_edit_number" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat style="@style/public_input_lin">

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/public_textview01"
                android:text="@string/input_contacts_name" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/etContacts"
                style="@style/public_edit_str" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat style="@style/public_input_lin">

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/public_textview01"
                android:text="@string/input_msg_context" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/etMsg"
                style="@style/public_edit_str" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnCallReminder"
            style="@style/public_button"
            android:text="@string/call_reminder" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnMissedCall"
            style="@style/public_button"
            android:text="@string/missed_call" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnSmsReminder"
            style="@style/public_button"
            android:text="@string/sms_reminder" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnHangUpPhone"
            style="@style/public_button"
            android:text="@string/hang_up_phone" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnAnswerThePhone"
            style="@style/public_button"
            android:text="@string/answer_the_phone" />

    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.appcompat.widget.LinearLayoutCompat>
